[gd_scene load_steps=9 format=2]

[ext_resource path="res://Actors/Towers/player-blue-square.svg" type="Texture" id=1]
[ext_resource path="res://Actors/SelectableArea2D/SelectableArea2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Actors/Towers/BasicTower.gd" type="Script" id=3]
[ext_resource path="res://Objects/Weapons/Weapon2D.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/Bullets/TowerFreezingBullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://Interface/UpgradePanel/UpgradePanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://Actors/Towers/Upgrades.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="BasicTower" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
anchor_top = -48.0
anchor_right = 32.0
anchor_bottom = -48.0
margin_left = -32.0
margin_top = -88.0
margin_right = 32.0
margin_bottom = -72.0
rect_pivot_offset = Vector2( 32, 8 )
text = "Selected"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectableArea2D" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectableArea2D"]
position = Vector2( 0, -32 )
shape = SubResource( 1 )

[node name="Weapon2D" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -32 )
bullet_scene = ExtResource( 5 )

[node name="Upgrades" type="Node" parent="."]
script = ExtResource( 7 )

[node name="UpgradePanel" parent="." instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -160.0
margin_top = -432.0
margin_right = 160.0
margin_bottom = -112.0
[connection signal="selection_toggled" from="SelectableArea2D" to="." method="_on_SelectableArea2D_selection_toggled"]
[connection signal="upgrade_requested" from="UpgradePanel" to="Upgrades" method="_on_UpgradePanel_upgrade_requested"]
